[gd_scene load_steps=2 format=3 uid="uid://diltt6cc7tb2l"]

[ext_resource type="Script" path="res://menu/pause_menu/pause_menu.gd" id="1_s4l3m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s4l3m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -67.0
offset_right = 45.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="btn_resume" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Reprendre
"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="btn_quit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quitter
"
